# Dawnstar-ReadAloud

./: .dockerignore  .gitignore  BLOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  FEATURES_AND_COMMANDS.md  Makefile  README.md  TEST_REPORT.md  USER_MANUAL.md  app.py  app_config.py  build-deb.sh  config.py  configure.py  dawnstar-readaloud_1.1.0_amd64.deb  docker-compose.yml  get_accessible_text.py  get_active_source.py  install.sh  pause.txt  pause_speaking.sh  pyproject.toml  requirements.txt  sentence_overlay.py  setup.py  show_sentence.sh  speak_active_doc.sh  speak_from_cursor.sh  speak_selection.sh  stop_speaking.sh  test_summary.md  tts_platform.py  ttsc
core/: __init__.py  cli.py  config.py  constants.py  document_readers.py  engine.py  exceptions.py  extractor.py  logger.py  platform.py  player.py  runtime.py  source_loader.py  text_processing.py  url_reader.py
debian/: changelog  conffiles  control  manpages  postinst  rules
scripts/: git-commit-announce  morning-briefing  proofread  read-article  read-url  speak-selection-enhanced  speed-reading
shortcuts/: gnome.sh  install.sh  kde.sh  sway.sh  xfce.sh
specs/: tts-spec.md
tests/: test_daemon.py  test_document_readers.py  test_exceptions.py  test_platform.py  test_player.py  test_rate_limiter.py  test_runtime.py  test_security.py  test_text_processing.py  test_tts.py  test_url_reader.py
ttsd/: __init__.py  __main__.py  daemon.py  dbus_service.py  ipc.py
