[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dawnstar-readaloud"
version = "1.0.0"
description = "Enhanced Text-to-Speech Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts==2.5.4",
    "edge-tts>=6.1.9",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.2",
    "pypdf>=6.7.1"
]

[project.scripts]
tts = "app:main"
ttsd = "ttsd.__main__:main"
